# syn-parse-example

./: Cargo.toml
my_macro/: Cargo.toml
my_macro/src/: lib.rs
src/: main.rs
