[package]
name = "macro_test"
version = "0.1.0"
edition = "2021"

[workspaces]
members = ["my_macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.103", features=["extra-traits"]}
quote = "1.0.21"
cmd_lib = "1.3.0"
my_macro = {path = "./my_macro"}
